# Genesis

./: .gitignore  Genesis_llm.md  README.md  genesis_plan.md  genesis_sim.html  index.html  pyproject.toml  requirements.txt
docs/: architecture.md  index.md  installation.md  quickstart.md
docs/api/: core.md  distillation.md  models.md  tts.md
docs/tutorials/: medical_llm.md  tts_evolution.md
experiments/llm_medical/: config.yaml  run_evolution.py
experiments/tts_voice/: config.yaml  run_evolution.py
genesis/: __init__.py  cli.py  optimizer.py
genesis/config/: __init__.py  hardware.py  settings.py
genesis/core/: __init__.py  fitness.py  genetics.py  population.py  selection.py
genesis/data/: __init__.py  datasets.py  preprocessing.py
genesis/distillation/: __init__.py  kd_loss.py  trainer.py
genesis/models/: __init__.py  lora_manager.py  ollama_teacher.py  student.py  teacher.py
genesis/pruning/: __init__.py  pruner.py  saliency.py
genesis/tts/: __init__.py  mcd_fitness.py  style_evolution.py  tts_child.py
genesis/utils/: __init__.py  checkpointing.py  dashboard.py  logging.py  metrics.py
scripts/: download_models.py  setup_environment.sh  test_evolved_model.py  train_qwen3.py  watch_training.py
tests/: __init__.py  test_checkpointing.py  test_cli.py  test_config.py  test_datasets.py  test_distillation.py  test_distillation_trainer.py  test_fitness.py  test_genetics.py  test_integration.py  test_logging_utils.py  test_lora_manager.py  test_metrics.py  test_optimizer.py  test_population.py  test_pruning.py  test_qwen3_integration.py  test_selection.py  test_tts.py
